# laylow

./: .gitignore  CMakeLists.txt  README.md  laylow.py
api/: bridge.py  main.py  memory.py  models.py  rag.py
engine/include/: gguf.h  matmul.h  tensor.h  tokenizer.h  transformer.h
engine/src/: gguf.cpp  main.cpp  matmul.cpp  tensor.cpp  tokenizer.cpp  transformer.cpp
frontend/src/: App.jsx
